--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,11 @@
 layout: default
 ---
 <div class="post-content well">
+{% include advertisements.html %}
 <article class="content">
     <div class="post">{{ content }}</div>
     <hr />
+    {% include advertisements.html %}
     {% include share-page.html %}
 </article>
 <hr />
