--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/74dfc6cf47.css">
 
         <!-- Core BootStrap CSS -->
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ site.url }}/static/css/bootstrap.min.css">
         <!-- Material Design CSS -->
         <link rel="stylesheet" href="{{ site.url }}/static/css/bootstrap-material-design.min.css">
 
@@ -174,7 +174,7 @@
         
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="{{ site.url }}/static/js/bootstrap.min.js"></script>
 
         <script src="{{ site.url }}/static/js/thickbox-compressed.js"></script>
         <script src="{{ site.url }}/static/js/material.min.js"></script>
